# karbon_basic_cafe24

./: .env.example  .gitignore  BLEKheXf.js  README.md  opencode.json  package.json  setup-env.ps1  setup-env.sh
.sisyphus/: boulder.json
backend/rust/: .env.example  .gitignore  Cargo.toml  README.md
backend/rust/api/: Cargo.toml
backend/rust/api/src/: config.rs  db.rs  error.rs  main.rs  response.rs  timer.rs  types.rs
backend/rust/api/src/handlers/: auth.rs  member.rs  mod.rs
backend/rust/api/src/middleware/: cors.rs  jwt.rs  mod.rs
backend/rust/api/src/routes/: route.rs
backend/rust/api/src/routes/auth/login/: route.rs
backend/rust/api/src/routes/auth/logout/: route.rs
backend/rust/api/src/routes/auth/refresh/: route.rs
backend/rust/api/src/routes/auth/register/: route.rs
backend/rust/api/src/routes/banner/[position]/: route.rs
backend/rust/api/src/routes/bbs/[bo_table]/: route.rs
backend/rust/api/src/routes/bbs/[bo_table]/[wr_id]/: route.rs
backend/rust/api/src/routes/content/[co_id]/: route.rs
backend/rust/api/src/routes/latest/[bo_table]/: route.rs
backend/rust/api/src/routes/member/profile/: route.rs
backend/rust/api/src/routes/menu/: route.rs
backend/rust/api/src/routes/popup/: route.rs
backend/rust/doc/: 01-workspace-overview.md  02-usage-guide.md  03-microservice-separation.md
dev/: README.md  start.sh
docker/: .env.example  Dockerfile.apache  Dockerfile.php  README.md  docker-compose.yml  install.sh  restart.sh  start.sh  stop.sh
docs/: AWS_LAMBDA_THUMBNAIL.md  DEEP_LINK_SETUP.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  FIREBASE_SETUP.md  HYBRID_APP.md  INSTALLATION.md  OVERVIEW.md  QUICK_START.md  README.md  S3_CHUNKED_UPLOAD.md  deployment.md  fapi_ai_context.md  fapi_deployment_guide.md  fapi_documentation.md  fapi_error_response.md  fapi_improvement_proposal.md  fapi_legacy_analysis.md  fapi_module_system.md  fapi_performance_optimization.md  fapi_project_structure.md  fapi_security_cookie.md  (+9 more)
scripts/lambda/thumbnail-generator/: Cargo.toml
scripts/lambda/thumbnail-generator/src/: main.rs
(+470 files in other folders)
