[workspace]
members = ["api"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
axum-folder-router = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "chrono", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
cookie = "0.18"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.8"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
