[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-folder-router = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
cookie = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "api"
path = "src/main.rs"
