[package]
name = "thumbnail-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55.0"
aws-sdk-s3 = "0.28.0"
image = "0.24.0"
tokio = { version = "1.0", features = ["full"] }
aws-lambda-events = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
